@@ -15,7 +15,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-            Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+            List.of(1, 2, 3, 4, 5, 6, 7),
             3
         );
         int[][] expect = {
@@ -33,7 +33,7 @@ public class ConvertList2ArrayTest {
         list.add(new int[]{3, 4, 5, 6});
         ConvertList2Array convertList = new ConvertList2Array();
         List<Integer> result = convertList.convert(list);
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6);
         assertThat(result, is(expect));
     }
 }
