@@ -5,8 +5,6 @@ import static org.junit.Assert.assertThat;
 
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -18,15 +16,13 @@ public class UserConvertTest {
         User ivan = new User(466456465, "Ivan", "Manchester");
         User petr = new User(13, "Petr", "Minsk");
         User mikhail = new User(666, "Mikhail", "Riga");
-        List<User> users = Arrays.asList(ivan, petr, mikhail);
+        List<User> users = List.of(ivan, petr, mikhail);
 
         Map<Integer, User> actualUsersMap = userConvert.process(users);
-        Map<Integer, User> expectedUsersMap = new HashMap<>();
-
-        expectedUsersMap.put(ivan.getId(), ivan);
-        expectedUsersMap.put(petr.getId(), petr);
-        expectedUsersMap.put(mikhail.getId(), mikhail);
-
+        Map<Integer, User> expectedUsersMap = Map.of(
+            ivan.getId(), ivan,
+            petr.getId(), petr,
+            mikhail.getId(), mikhail);
         assertThat(actualUsersMap, is(expectedUsersMap));
     }
 
@@ -35,14 +31,12 @@ public class UserConvertTest {
         UserConvert userConvert = new UserConvert();
         User ivan = new User(0, null, null);
         User petr = new User(13, "Petr", "Minsk");
-        List<User> users = Arrays.asList(ivan, petr);
+        List<User> users = List.of(ivan, petr);
 
         Map<Integer, User> actualUsersMap = userConvert.process(users);
-        Map<Integer, User> expectedUsersMap = new HashMap<>();
-
-        expectedUsersMap.put(ivan.getId(), ivan);
-        expectedUsersMap.put(petr.getId(), petr);
-
+        Map<Integer, User> expectedUsersMap = Map.of(
+            ivan.getId(), ivan,
+            petr.getId(), petr);
         assertThat(actualUsersMap, is(expectedUsersMap));
     }
 }
